------------------------------------------------------------------------
r354 | nenolod | 2002-03-13 12:23:57 -0500 (Wed, 13 Mar 2002) | 2 lines

Increment build stamp for 0.1 release.

------------------------------------------------------------------------
r336 | nenolod | 2005-06-04 18:13:29 -0400 (Sat, 04 Jun 2005) | 2 lines

Bump release stamp again.

------------------------------------------------------------------------
r332 | nenolod | 2005-06-04 17:58:07 -0400 (Sat, 04 Jun 2005) | 2 lines

Bump release stamp.

------------------------------------------------------------------------
r307 | nenolod | 2005-06-01 15:10:52 -0400 (Wed, 01 Jun 2005) | 2 lines

Increment release stamp. Thanks, [Brain] for your work on protocol/inspircd.c

------------------------------------------------------------------------
r303 | nenolod | 2005-06-01 11:21:47 -0400 (Wed, 01 Jun 2005) | 2 lines

Bump build-id release stamp.

------------------------------------------------------------------------
r264 | nenolod | 2005-05-31 11:00:41 -0400 (Tue, 31 May 2005) | 2 lines

Bump release stamp again.

------------------------------------------------------------------------
r261 | nenolod | 2005-05-31 10:16:52 -0400 (Tue, 31 May 2005) | 2 lines

Bump revision stamp again.

------------------------------------------------------------------------
r259 | nenolod | 2005-05-31 10:12:54 -0400 (Tue, 31 May 2005) | 2 lines

Bump release stamp (we should probably release a new build since bahamut ircd support was b0rked.)

------------------------------------------------------------------------
r253 | nenolod | 2005-05-30 21:21:24 -0400 (Mon, 30 May 2005) | 2 lines

Increment buildid.

------------------------------------------------------------------------
r250 | nenolod | 2005-05-30 19:34:18 -0400 (Mon, 30 May 2005) | 2 lines

Tweak the build-id variable a little bit.

------------------------------------------------------------------------