@@ -1,72 +1,0 @@
-/* inc/sysconf.h.  Generated by configure.  */
-/* inc/sysconf.h.in.  Generated automatically from autoconf/configure.in by autoheader.  */
-
-/* Define to empty if the keyword does not work.  */
-/* #undef const */
-
-/* Define if you have the strftime function.  */
-#define HAVE_STRFTIME 1
-
-/* Define as __inline if that's what the C compiler calls it.  */
-/* #undef inline */
-
-/* Define as the return type of signal handlers (int or void).  */
-#define RETSIGTYPE void
-
-/* Define to `unsigned' if <sys/types.h> doesn't define.  */
-/* #undef size_t */
-
-/* Define if you have the ANSI C header files.  */
-#define STDC_HEADERS 1
-
-/* Define if you can safely include both <sys/time.h> and <time.h>.  */
-#define TIME_WITH_SYS_TIME 1
-
-/* Define if your <sys/time.h> declares struct tm.  */
-/* #undef TM_IN_SYS_TIME */
-
-/* Define if you have the gettimeofday function.  */
-#define HAVE_GETTIMEOFDAY 1
-
-/* Define if you have the inet_ntop function.  */
-#define HAVE_INET_NTOP 1
-
-/* Define if you have the inet_pton function.  */
-#define HAVE_INET_PTON 1
-
-/* Define if you have the mmap function.  */
-#define HAVE_MMAP 1
-
-/* Define if you have the select function.  */
-#define HAVE_SELECT 1
-
-/* Define if you have the strdup function.  */
-#define HAVE_STRDUP 1
-
-/* Define if you have the strlcat function.  */
-/* #undef HAVE_STRLCAT */
-
-/* Define if you have the strlcpy function.  */
-/* #undef HAVE_STRLCPY */
-
-/* Define if you have the umask function.  */
-#define HAVE_UMASK 1
-
-/* Define if you have the <getopt.h> header file.  */
-#define HAVE_GETOPT_H 1
-
-/* Define if you have the <sys/select.h> header file.  */
-#define HAVE_SYS_SELECT_H 1
-
-/* Define if you have the <sys/time.h> header file.  */
-#define HAVE_SYS_TIME_H 1
-
-/* Define if you have the nsl library (-lnsl).  */
-/* #undef HAVE_LIBNSL */
-
-/* Define if you have the socket library (-lsocket).  */
-/* #undef HAVE_LIBSOCKET */
-
-/* Uncomment to enable large network support. */
-/* #undef LARGE_NETWORK */
-
