@@ -1,4 +1,14 @@
 ------------------------------------------------------------------------
+r359 | nenolod | 2002-03-13 13:13:21 -0500 (Wed, 13 Mar 2002) | 2 lines
+
+Branch off the 0.1 release.
+
+------------------------------------------------------------------------
+r356 | nenolod | 2002-03-13 12:27:38 -0500 (Wed, 13 Mar 2002) | 2 lines
+
+Bump release stamp (again).
+
+------------------------------------------------------------------------
 r354 | nenolod | 2002-03-13 12:23:57 -0500 (Wed, 13 Mar 2002) | 2 lines
 
 Increment build stamp for 0.1 release.
